Highlight mouse-over view drop position while drag action is running. Implemented dragging of view from pool level. Removed StringConversionTool methods and replaced conversions with standard java way. Show view handles only when a view is present on that position inside the bucket. Drag and drop of views works also in zoomed mode (still some restrictions). Decreased java warnings from about 150 to 60. Removed serializable interfaces from org.caleydo.* classes.
git-svn-id: svn://localhost:8080/caleydo_main/trunk@1690 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3